css/header.css
.header-container{
    display: grid;
    grid-template-columns: 60% 40%;
    padding: 0;
    width: 100%;
    background-color: #fff;
}

.header-nav-container{
    grid-column: 1;
    padding: 35px 0 25px 0;
    margin: 0 0 0 35px;
    float: left;
    position: relative;
    list-style: none;
    transition: padding .25s ease-out;
}

.header-nav-item{
    display: inline-block;
    margin: 0 1.5em 10px 0;
    padding: 0 5px 0 0;
    position: relative;
}

.header-nav-item-button{
    text-decoration: none;
    color: #8a8a8a;
    font-size: 20px;
    line-height: 2em;
    text-transform: uppercase;
    letter-spacing: .1em;
    font-weight: 400;
    font-style: normal;
    font-family: "proxima-nova";
    border-bottom: 1px solid transparent;
}
.header-nav-item-button:hover{
    color: #222222;
    border-color: #222222;
    cursor: pointer;
}

.header-nav-item-button-active{
    color: #222222;
    border-color: #222222;
}

.logo-container{
    grid-column: 2;
    margin: 0 35px 0 0;
    padding: 35px 0 35px 0;
    font-family: "proxima-nova";
    font-size: 2em;
    line-height: 1em;
    text-transform: uppercase;
    font-weight: 400;
    font-style: normal;
    text-align: right;
    letter-spacing: 0.0714286em;
}







@media only screen and (max-width: 800px) {
    .header-container{
        display: grid;
        grid-template-columns: 30% 70%;
        bottom: 0;
        position: fixed;
    }
    .header-nav-container{
        grid-column: 2;
        float: none;
        grid-row: 1;
        padding: 10px 0 10px 0;
        margin: 0 0 0 5px;
        list-style: none;
        transition: padding .25s ease-out;
    }
    .header-nav-item{
        margin: 0.5em 0.5em 5px 0;
        padding: 0 1vw 0 1vw;
        float: right;
    }

    .header-nav-item-button{
        font-size: 23px;
    }

    .logo-container{
        grid-column: 1;
        grid-row: 1;
        margin: auto 5px auto 3px;
        padding: 10px 0 10px 0;
        font-family: "proxima-nova";
        font-size: 4vw;
        line-height: 1em;
        text-transform: uppercase;
        font-weight: 400;
        font-style: normal;
        text-align: center;
        letter-spacing: 0.0714286em;
    }
}

